Corrects line height on mobile for compoundParent title

--- a/css/global.scss
+++ b/css/global.scss
@@ -6608,7 +6608,7 @@ a.institutionSmall{
 body.compoundParent .compoundGallery_header .compoundParent {
     font-size: 28px;
     color: white;
-    line-height: 19px;
+    line-height: 28px;
     margin-left: 2px;
 }
 
